--- a/src/app/MyComponents/add-todo/add-todo.component.html
+++ b/src/app/MyComponents/add-todo/add-todo.component.html
@@ -1,14 +1,11 @@
-<div class="y-3">
-<h4>Add a Todo</h4>
-<form (ngSubmit)="onSubmit()")>
-    <div class="mb-3">
-      <label for="title" class="form-label">Todos Title</label>
-      <input type="text" [(ngModel)]="title" class="form-control" id="title" name="title" aria-describedby="emailHelp">
+<!-- src/app/MyComponents/add-todo/add-todo.component.html -->
+<div class="container">
+  <h2>Add Todo</h2>
+  <form (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="title">Title</label>
+      <input type="text" [(ngModel)]="title" name="title" class="form-control" id="title" required>
     </div>
-    <div class="mb-3">
-      <label for="desc" class="form-label">todo Description</label>
-      <input type="text" [(ngModel)]="title" class="form-control" id="desc" name="desc">
-    </div>
-    <button type="submit" class="btn btn-sm btn-primary">add_todo</button>
+    <button type="submit" class="btn btn-primary">Add</button>
   </form>
 </div>
