--- a/src/app/MyComponents/add-todo/add-todo.component.html
+++ b/src/app/MyComponents/add-todo/add-todo.component.html
@@ -1,11 +1,16 @@
-<!-- src/app/MyComponents/add-todo/add-todo.component.html -->
-<div class="container">
-  <h2>Add Todo</h2>
+<div class="form-control">
+  <h4><legend>Add a Todo</legend></h4>
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="title">Title</label>
-      <input type="text" [(ngModel)]="title" name="title" class="form-control" id="title" required>
+      <label for="title">Todos Title</label>
+      <input type="text" [(ngModel)]="title" class="form-control" id="title" name="title">
     </div>
-    <button type="submit" class="btn btn-primary">Add</button>
+    <div class="form-group">
+      <label for="desc">todo Description</label>
+      <input type="text" [(ngModel)]="desc" class="form-control" id="desc" name="desc">
+    </div>
+    <div class="d-grid gap-2">
+      <button type="submit" class="btn btn-sm btn-primary m-2">Add Todo</button>
+    </div>
   </form>
 </div>
